--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="settings-container">
   <div class="top-bar">
-    <button class="close-btn">✕</button>
+    <button class="close-btn" (click)="goHome()">✕</button>
     <button class="save-btn">Save Changes</button>
   </div>
 
