--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,3 +1,6 @@
+<div class="all">
+
+<div class="animated-ball"></div>
 <div class="container">
   <h1>Sign up</h1>
 
@@ -43,4 +46,6 @@
     <!-- عرض رسالة الخطأ إذا كانت موجودة -->
     <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
   </form>
+</div>
+
 </div>
