--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,42 +7,43 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h2 class="title">Login</h2>
+  <div class="all">
+    <div class="animated-ball"></div>
+    <div class="container">
+      <h2 class="title">Login</h2>
 
-    <div class="divider">
-      <hr />
-      <span>OR</span>
-      <hr />
-    </div>
-
-    <form (ngSubmit)="onSubmit()">
-      <div class="form-row">
-        <div class="form-group">
-          <label for="email">E-mail</label>
-          <input type="email" id="email" [(ngModel)]="email" name="email" placeholder="email" required />
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" [(ngModel)]="password" name="password" placeholder="password" required />
-        </div>
+      <div class="divider">
+        <hr />
+        <span>OR</span>
+        <hr />
       </div>
 
-      <p class="signup-link">
-        Don’t have an account? <a routerLink="/register">Sign up</a>
-      </p>
+      <form (ngSubmit)="onSubmit()">
+        <div class="form-row">
+          <div class="form-group">
+            <label for="email">E-mail</label>
+            <input type="email" id="email" [(ngModel)]="email" name="email" placeholder="email" required />
+          </div>
 
-      <p class="signup-link">
-        forget password <a routerLink="/forget">forget password</a>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" [(ngModel)]="password" name="password" placeholder="password" required />
+          </div>
+        </div>
 
+        <p class="signup-link">
+          Don’t have an account? <a routerLink="/register">Sign up</a>
+        </p>
 
-      <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
+        <p class="signup-link">
+          forget password <a routerLink="/forget">forget password</a>
+        </p>
 
-      <button type="submit" class="submit-btn">Login</button>
-    </form>
+        <p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
+
+        <button type="submit" class="submit-btn">Login</button>
+      </form>
+    </div>
   </div>
-
-
 </body>
 </html>
