Sidebar settings icon + responsive room gallery

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,37 +1,18 @@
-<div class="animated-ball"></div>
-
 <div class="chat-container">
   <div class="sidebar">
-    <div class="chat-preview" *ngFor="let message of messages">
-      <img src="assets/profile.jpg" alt="User" />
-      <div>
-        <div class="name">{{ message.sender }}</div>
-        <div class="preview">{{ message.content }}</div>
+    <div class="chat-preview" *ngFor="let user of users">
+      <img
+        [src]="user.profilePicture ? user.profilePicture : 'assets/profile.jpg'"
+        alt="User"
+      />
+      <div class="message-info">
+        <div class="name">{{ user.fullName || user.userName }}</div>
+        <div class="preview">{{ user.bio || 'No bio available' }}</div>
       </div>
-      <div class="time">{{ message.time }}</div>
     </div>
   </div>
 
   <div class="chat-window">
-    <div class="chat-header">
-      <div class="user-info">
-        <img src="assets/profile.jpg" alt="User" />
-        <span class="username">Ali Ellebi</span>
-      </div>
-    </div>
-
-    <div class="chat-body">
-      <div *ngFor="let message of messages" [ngClass]="{'my-message': message.isMine, 'their-message': !message.isMine}">
-        <div class="message-bubble">
-          {{ message.content }}
-          <div class="time">{{ message.time }}</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="chat-input">
-      <input type="text" placeholder="Type a message..." />
-      <button>Send</button>
-    </div>
+    <p>هنا ممكن تضيف محتوى ثاني لاحقًا</p>
   </div>
 </div>
