--- a/src/app/background/background.component.html
+++ b/src/app/background/background.component.html
@@ -1,3 +1,5 @@
-<div class="background">
-    <div class="ball"></div>
+
+ <div class="background-container">
+    <div class="animated-ball big-ball"></div>
+    <div class="animated-ball small-ball"></div>
   </div>
