--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,4 @@
 <!-- navbar.component.html -->
-<div class="animated-ball"></div>
 
 <nav class="navbar">
   <div class="logo">
@@ -14,7 +13,7 @@
       <input type="text" id="searchBox" class="search-box" placeholder="Search ... ">
     </div>
 
-    <i class="bi bi-layers"></i>
+   <a routerLink="/home"> <i class="bi bi-layers"></i></a>
     <a routerLink="/generate"><i class="bi bi-brush"></i></a>
 
     <div class="profile-dropdown">
