--- a/src/app/pages/generate/generate.component.html
+++ b/src/app/pages/generate/generate.component.html
@@ -1,5 +1,7 @@
+  <app-navbar></app-navbar>
+
 <div class="all">
-  <div class="animated-ball"></div>
+<app-background></app-background>
 
   <div class="main-content">
     <!-- المحتوى الأساسي -->
