--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
+    <app-background></app-background>
 
-    <div class="animated-ball"></div>
 
-<!-- شريط التنقل -->
+<!--شريط التنقل -->
 <nav class="navbar">
     <div class="logo">
         <a href="index.html">ROOMIFY</a>
