--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,6 +1,9 @@
+<nav class="navbar">
+  <div class="logo">Roomify</div>
+</nav>
+
 <div class="all">
 
-<div class="animated-ball"></div>
 <div class="container">
   <h1>Sign up</h1>
 
