--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+
+<nav class="navbar">
+  <div class="logo">Roomify</div>
+</nav>
   <div class="all">
-    <div class="animated-ball"></div>
+    <app-background></app-background>
+
     <div class="container">
       <h2 class="title">Login</h2>
 
@@ -45,5 +41,3 @@
       </form>
     </div>
   </div>
-</body>
-</html>
