--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
-    <app-background></app-background>
+  
+ <div class="background-container">
+    <div class="animated-ball big-ball"></div>
+    <div class="animated-ball small-ball"></div>
+  </div>
 
 
 <!--شريط التنقل -->
@@ -60,6 +64,8 @@
     <img src="/assets/jojo.jpg" alt="User" class="user-icon">
   </div>
 </div>
+
+
 
 </body>
 </html>
